<resources>
    <string name="app_name">Balloons POP</string>
    <string name="start_game">Start Game</string>
    <string name="high_scores">High Score</string>
    <string name="settings">Settings</string>
    <string name="score_text">Score: %1$d</string>
    <string name="lives_text">Lives: %1$d</string>
    <string name="timer_text">Time: %1$d</string>
    <string name="high_score_text">High Score: %1$d</string>
    <string name="time_30">Time: 30</string>
    <string name="lives_3">Lives: 3</string>
    <string name="balloon_description" />
    <string name="time_00_00">Time: 00:00</string>
    <string name="lives">Lives:</string>
    <string name="score_0">Score: 0</string>
    <string name="lives_10">Lives:10</string>
    <string name="start_game1">Start Game</string>
    <string name="high_score">High Score</string>
    <string name="balloons_pop1"> Balloons PoP</string>
    <string name="exit_game">Exit Game</string>
    <string name="restart_game">Restart Game</string>
    <string name="your_score">Your Score</string>
    <string name="main_activity">Main</string>
    <string name="Hscore">Score: 0</string>
    <string name="reset_high_score">Reset High Score</string>
</resources>
